# notion_operator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  EFFICIENCY_REPORT.md  EXCEL_EXPORT_SPEC.md  README.md  app.py  fetch_notion_page.py  listing_app.py  main.py  pyproject.toml  requirements.txt  version.py
.claude/: settings.local.json
.github/workflows/: release.yml
brother_ql_proxy/: __init__.py
brother_ql_proxy/core/: __init__.py  config.py  printer_proxy.py
brother_ql_proxy/notion/: __init__.py  parser.py  preview.py
brother_ql_proxy/ui/: __init__.py  config_tab.py  export_tab.py  file_save.py  label_tab.py  log_tab.py  receipt_tab.py
brother_ql_proxy/utils/: __init__.py  (+1 more)
docs/: AUTO_UPDATE.md  DESIGN_年間集計_仕入れ日ベース化.md  EXCEL_EXPORT.md  EXCEL_EXPORT_SPEC.md  LABEL_PRINTING.md  MAC_APP_BUILD.md  flat_inventory_database_schema.md  商品管理テーブル項目一覧.md  日別出力機能仕様.md
flat_export/: README.md  app.py
func/: main.py
listing_gui/: __init__.py  app.py  listing_tab.py  notion_tab.py  yahoo_tab.py
local_server/: README.md  SETUP.md  build_exe_simple.bat  requirements.txt  run_proxy.py  sample_notion_data.json
notion/: __init__.py  fetch_page.py
tests/: generate_test_excel.py  test_export_tab.py  test_image_download.py  test_label_fields.py  test_notion_config.py  test_print_label.py  test_property_fetch.py  test_service.py  test_updater.py
updater/: __init__.py  _install_mac.py  _install_win.py  checker.py  downloader.py  installer.py  ui.py
yahoo_auction/: __init__.py  config.py  image_handler.py  listing.py  login.py  main.py
(+55 files in other folders)
