[project]
name = "notion-operator"
version = "0.1.0"
description = "Notion連携 出品・ラベル印刷ツール"
requires-python = ">=3.10"
dependencies = [
    "flet[all]==0.28.3",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "qrcode>=7.4.0",
    "pystray>=0.19.0",
    "pyngrok>=7.0.0",
    "werkzeug>=3.0.0",
    "notion-client>=2.7.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "selenium>=4.18.0",
    "webdriver-manager>=4.0.0",
    "brother>=2.3.0",
    "reportlab>=4.0.0",
]

[tool.uv]
# スクリプトベースのプロジェクト（パッケージビルド不要）
package = false

