[project]
name = "notion-operator"
version = "0.4.8"  # 実体は version.py の __version__（そちらが唯一のソース）
description = "Notion連携 ラベル印刷・データ出力ツール"
requires-python = ">=3.10"
dependencies = [
    "flet[all]==0.28.3",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
    "qrcode>=7.4.0",
    "pystray>=0.19.0",
    "pyngrok>=7.0.0",
    "werkzeug>=3.0.0",
    "notion-client>=2.7.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "brother>=2.3.0",
    "reportlab>=4.0.0",
]

[tool.uv]
# スクリプトベースのプロジェクト（パッケージビルド不要）
package = false

[tool.flet]
flutter_build_args = ["--cmake-generator=Visual Studio 17 2022"]